# notes

./: .envrc  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/documentation/: mkdocs.md
docs/python/environments/: miniconda.md  uv.md
requirements/: base.txt  development.in  development.txt
