[project]
name = "notes"
version = "0.1.0"
description = "My notes about computing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
development = [
    "babel==2.17.0",
    "backrefs==5.8",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "ghp-import==2.1.0",
    "identify==2.6.9",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.11",
    "mkdocs-material-extensions==1.3.1",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "pip==25.0.1",
    "pip-tools==7.4.1",
    "platformdirs==4.3.7",
    "pre-commit==4.2.0",
    "pygments==2.19.1",
    "pymdown-extensions==10.14.3",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "requests==2.32.3",
    "setuptools==78.1.0",
    "six==1.17.0",
    "urllib3==2.3.0",
    "virtualenv==20.30.0",
    "watchdog==6.0.0",
    "wheel==0.45.1",
]
